--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -1,18 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
-h1, h2 {
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
+h1,
+h2 {
+	font-family: "Raleway", sans-serif;
+	text-transform: uppercase;
+	font-weight: 500;
 }
 
-h3, h4, h5 {
-  font-family: "Raleway", sans-serif;
+h3,
+h4,
+h5 {
+	font-family: "Raleway", sans-serif;
 }
 
-p, a, label {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  line-height: 1.5em;
-  font-size: 1em;
+p,
+a,
+label {
+	font-family: "Open Sans", sans-serif;
+	font-weight: 400;
+	line-height: 1.5em;
+	font-size: 1em;
+}
+body {
+	background-color: #005b52;
+}
+.gabbi {
+	background-image: none, url(../Gabbi.svg);
+	height: 7em;
+	/*background-repeat: no-repeat;*/
+}
+.mickis {
+	background-image: none, url(../Mickis.svg);
 }
 /*# sourceMappingURL=mainstyles.css.map */
