Adds NavBar. Changes dimensions, margin and sizing on HeroBanner

--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -1,8 +1,10 @@
 // Typography
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap');
 
 $heading-font: "Raleway", sans-serif
 $normal-font: "Open Sans", sans-serif
+$logo-font: "Exo", sans-serif
 
 h1, h2, 
     font-family: $heading-font
@@ -17,3 +19,13 @@ p, a, label
     font-weight: 400
     line-height: 1.5em
     font-size: 1em
+    text-decoration: none
+    color: white
+
+.logo--text
+    font-family: $logo-font
+    font-weight: 600
+    font-size: 1.4em
+    text-transform: uppercase
+    color: white
+
