--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap");
 h1, h2 {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
@@ -14,5 +15,15 @@ p, a, label {
   font-weight: 400;
   line-height: 1.5em;
   font-size: 1em;
+  text-decoration: none;
+  color: white;
+}
+
+.logo--text {
+  font-family: "Exo", sans-serif;
+  font-weight: 600;
+  font-size: 1.4em;
+  text-transform: uppercase;
+  color: white;
 }
 /*# sourceMappingURL=mainstyles.css.map */
