--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -29,3 +29,14 @@ p, a, label
     text-transform: uppercase
     color: white
 
+// Backgrounds
+.hero-banner--mobile
+    background-image: url("./../MobileHeroBanner.jpg")
+
+.login-register--container
+    background-image: url("./../LogInRegisterBackground.png")
+.login-register--container, .hero-banner--mobile
+	width: 100vw
+	height: 100vh
+	background-repeat: no-repeat
+	background-size: cover
