--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap");
 h1, h2 {
@@ -6,59 +5,10 @@ h1, h2 {
   text-transform: uppercase;
   font-weight: 500;
 }
-h3,
-h4,
-h5 {
-	font-family: "Raleway", sans-serif;
-}
 
-p,
-a,
-label {
-	font-family: "Open Sans", sans-serif;
-	font-weight: 400;
-	line-height: 1.5em;
-	font-size: 1em;
+h3, h4, h5 {
+  font-family: "Raleway", sans-serif;
 }
-template {
-	background-color: #005b52;
-}
-
-.aboutus--container {
-    display: flex;
-    flex-flow: column wrap;
-    background-color: #005b52;
-}
-.contactUs {
-    color:white;
-    font-size:1.1em;
-    font-weight:400;
-    margin-bottom:0.7em; 
-    text-align: right;
-    margin-left: 30%;
-}
-iframe{
-  height: 20vh;
-}
-
-.pictureG{
-  background-color: #F4976C;
-  height: 18vh;
-  width: 110px;
-}
-.pictureM{
-  background-color: #B23850;
-  height: 18vh;
-  width: 110px;
-}
-.gabbi {
-  background: none, url(../Gabbi.svg);
-  
-  position: absolute;
-  background-repeat: no-repeat;
-  left: -1vw
-}
-
 
 p, a, label {
   font-family: "Open Sans", sans-serif;
@@ -91,11 +41,19 @@ p, a, label {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.mickis {
-  background: none, url(../Mickis.svg);
-  position: absolute;
-  background-repeat: no-repeat;
-  left: 10%;
+
+body {
+  background-color: #005B52;
 }
 
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-nav {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  text-align: right;
+}
 /*# sourceMappingURL=mainstyles.css.map */
