--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -1,5 +1,3 @@
-// Bootstrap
-@import "../node_modules/bootstrap/scss/bootstrap";
 // Typography
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap');
@@ -21,7 +19,6 @@ p, a, label
     font-weight: 400
     line-height: 1.5em
     font-size: 1em
-<<<<<<< HEAD
     text-decoration: none
     color: white
 
@@ -43,7 +40,15 @@ p, a, label
 	height: 100vh
 	background-repeat: no-repeat
 	background-size: cover
-=======
 body
     background-color: #005B52
->>>>>>> mickis
+
+
+// Navigation
+
+.navbar-light .navbar-nav .nav-link
+    color: white
+
+.navbar-nav
+    justify-content: end
+    text-align: right
