--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap");
+
+
 h1,
 h2 {
 	font-family: "Raleway", sans-serif;
 	text-transform: uppercase;
 	font-weight: 500;
+	font-size: 1.9rem;
 }
+
 h3,
 h4,
 h5 {
@@ -20,55 +24,38 @@ h6 {
 	color: white;
 }
 
-p,
-a,
-label {
-	font-family: "Open Sans", sans-serif;
-	font-weight: 400;
-	line-height: 1.5em;
-	font-size: 1em;
-}
-template {
-	background-color: #005b52;
-}
 
 .contactUs {
 	color: white;
-	font-size: 1.1em;
+	font-size: 0.7rem;
 	font-weight: 400;
-	margin-bottom: 0.3em;
+	margin-bottom: 1.5rem;
 }
 .icons {
-	left: 15%;
+	left: 10%;
 }
 
 .fa-sm {
-	font-size: 1.8rem;
+	font-size: 1.4rem;
 }
-/*.md{
-  font-size: 2.7rem;
-}
-.lg{
-  font-size: 3rem;
-  line-height: 1.3rem;
-}
-*/
 
 iframe {
-	height: 23vh;
+	height: 19vh;
 }
+
 
 .pictureG {
 	background-color: #f4976c;
-	height: 24vh;
-	width: 70%;
-  border-radius: 11px 11px 0px 0px;
-  
+	height: 18vh;
+	width: 60%;
+	border-radius: 11px 11px 0px 0px;
+	margin-top: 30%;
 }
+
 .pictureM {
 	background-color: #b23850;
-	height: 24vh;
-	width: 70%;
+	height: 18vh;
+	width: 60%;
 	border-radius: 11px 11px 0px 0px;
 }
 .gabbi {
@@ -83,7 +70,7 @@ a,
 label {
 	font-family: "Open Sans", sans-serif;
 	font-weight: 400;
-	line-height: 1.5em;
+	line-height: 1.3em;
 	font-size: 1em;
 	text-decoration: none;
 	color: white;
@@ -119,32 +106,36 @@ label {
 }
 
 .textBox_container-right {
-	width: 65%;
-	height: 8vh;
+	width: 53%;
+	height: 30%;
 	background-color: #f4976c;
 	border-radius: 0px 0px 11px 11px;
-  margin-left: 7%;
-  top:75%;
-  position: absolute;
+	margin-left: 7%;
+	top: 55%;
+	position: absolute;
 }
 .textBox_container-left {
-	width: 65%;
-	height: 8vh;
+	width: 52%;
+	height: 30%;
 	background-color: #b23850;
 	border-radius: 0px 0px 11px 11px;
-  margin-left: 7%;
-  top: 75%;
-  position: absolute;
+	margin-left: 7%;
+	top: 80%;
+	position: absolute;
 }
 .textBox_header {
-	font-size: 0.9rem;
-  color: white;
-  padding-top: 4%;
+	font-size: 0.6rem;
+	color: white;
+	padding-top: 4%;
 }
 .textBox_title {
-	font-size: 0.7rem;
-	color: white;
+	font-size: 0.45rem;
+	color: #636363;
 	text-align: left;
-	padding-left: 5%;
+	padding-left: 9%;
+}
+.social-media-icons{
+  margin-top: 2%;
+  height: 30%;
 }
 /*# sourceMappingURL=mainstyles.css.map */
