--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap");
+@import "../css/matchingPage.sass";
+@import "../css/aboutUsPage.sass";
+
+
 
 
 h1,
@@ -23,48 +27,6 @@ h6 {
 	font-size: 0.5rem;
 	color: white;
 }
-
-
-.contactUs {
-	color: white;
-	font-size: 0.7rem;
-	font-weight: 400;
-	margin-bottom: 1.5rem;
-}
-.icons {
-	left: 10%;
-}
-
-.fa-sm {
-	font-size: 1.4rem;
-}
-
-iframe {
-	height: 19vh;
-}
-
-
-.pictureG {
-	background-color: #f4976c;
-	height: 18vh;
-	width: 60%;
-	border-radius: 11px 11px 0px 0px;
-	margin-top: 30%;
-}
-
-.pictureM {
-	background-color: #b23850;
-	height: 18vh;
-	width: 60%;
-	border-radius: 11px 11px 0px 0px;
-}
-.gabbi {
-	background: none, url(../Gabbi.svg);
-
-	position: absolute;
-	background-repeat: no-repeat;
-}
-
 p,
 a,
 label {
@@ -99,43 +61,5 @@ label {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.mickis {
-	background: none, url(../Mickis.svg);
-	position: absolute;
-	background-repeat: no-repeat;
-}
 
-.textBox_container-right {
-	width: 53%;
-	height: 30%;
-	background-color: #f4976c;
-	border-radius: 0px 0px 11px 11px;
-	margin-left: 7%;
-	top: 55%;
-	position: absolute;
-}
-.textBox_container-left {
-	width: 52%;
-	height: 30%;
-	background-color: #b23850;
-	border-radius: 0px 0px 11px 11px;
-	margin-left: 7%;
-	top: 80%;
-	position: absolute;
-}
-.textBox_header {
-	font-size: 0.6rem;
-	color: white;
-	padding-top: 4%;
-}
-.textBox_title {
-	font-size: 0.45rem;
-	color: #636363;
-	text-align: left;
-	padding-left: 9%;
-}
-.social-media-icons{
-  margin-top: 2%;
-  height: 30%;
-}
 /*# sourceMappingURL=mainstyles.css.map */
