--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -1,6 +1,7 @@
-// Bootstrap
+
+/* Bootstrap */
 @import "../node_modules/bootstrap/scss/bootstrap";
-// Typography
+/* Typography */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap');
 
@@ -31,7 +32,7 @@ p, a, label
     text-transform: uppercase
     color: white
 
-// Backgrounds
+/* Backgrounds */
 .hero-banner--mobile
     background-image: url("./../MobileHeroBanner.jpg")
 
