fixed iframe problem

--- a/src/assets/css/aboutUsPage.sass
+++ b/src/assets/css/aboutUsPage.sass
@@ -1,3 +1,7 @@
+.test{
+    width:10%;
+}
+
 .pictureG {
   background-color: #f4976c;
   height: 18vh;
@@ -11,8 +15,9 @@
   width: 60%;
   border-radius: 11px 11px 0px 0px;
 }
-object {
-  height: 19vh;
+iframe {
+  height: 20vh;
+  width:60%;
 }
 .gabbi {
   background: none, url(../Gabbi.svg);
@@ -58,7 +63,7 @@ object {
 }
 
 .icons {
-  left: 14%;
+  left: 10%;
 }
 .aboutUs_Header{
     font-size: 1.7rem;
@@ -71,7 +76,7 @@ object {
     padding-left:1rem;
 }
 .aboutus_h2{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     color:white;
-    padding-top:1.3rem;
+    padding-top:1.5rem;
 }
