--- a/src/assets/css/matchingPage.sass
+++ b/src/assets/css/matchingPage.sass
@@ -1,24 +1,23 @@
-.B-C {
-	background-color: #00554c;
-	height: 15vh;
-}
-.B-C-A {
-	background-color: #005b52;
-	height: 15vh;
-}
-.match-list {
-	color: white;
-	font-size: 0.9rem;
-	text-align: left;
-	padding-top: 2rem;
-}
-.match-label{
-    font-size: 1.3rem;
-    color: white;
-    margin-top: 5%;
-    text-align: left;
-}
-.match-header{
-  font-family: "Raleway", sans-serif;
-  font-size: 1.8rem;
-}
+.B-C 
+	background-color: #00554c
+	height: 15vh
+
+.B-C-A 
+	background-color: #005b52
+	height: 15vh
+
+.match-list 
+	color: white
+	font-size: 0.9rem
+	text-align: left
+	padding-top: 2rem
+
+.match-label
+    font-size: 1.3rem
+    color: white
+    margin-top: 5%
+    text-align: left
+
+.match-header
+  font-family: "Raleway", sans-serif
+  font-size: 1.8rem
