--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -56,8 +56,6 @@ a:hover
 
 body
     background-color: #005B52
-<<<<<<< HEAD
-=======
 
 .hero-banner--mobile
     background-image: url("./../MobileHeroBanner.jpg")
@@ -87,9 +85,6 @@ body
 
 button:focus
 	outline: none
-<<<<<<< HEAD
->>>>>>> dev
-=======
 
 // Forms
 
@@ -122,4 +117,8 @@ button:focus
     font-weight: 600
     letter-spacing: 0.1em
     margin-top: 2em
->>>>>>> gabbi
+
+.btn-outline-startpagebtn
+    border-color: #fff
+    color: #fff
+    padding: 8px 1.2em
