--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -45,6 +45,7 @@ p, a, label, span
 
 a:hover
     color: darken(white, 15%)
+    text-decoration: none   
 
 .logo--text
     font-family: $logo-font
