--- a/src/assets/css/aboutUsPage.sass
+++ b/src/assets/css/aboutUsPage.sass
@@ -1,14 +1,3 @@
-$breakpoint-mobile-xs: 360px
-$breakpoint-mobile-md: 414px
-$breakpoint-mobile-lg: 480px
-$breakpoint-tablet-sm: 768px
-$breakpoint-tablet-lg: 1280px
-$breakpoint-desktop: 1024px
-
-@include breakpoint($breakpoint-tablet 850px)
-
-  @media (min-width: 320px) and (max-width: 360px)
-
 .pictureG
   background-color: #f4976c
   height: 18vh
@@ -69,7 +58,7 @@ iframe
   font-size: 1.4rem
 
 .icons
-  left: 10%
+  left: 8%
 
 .aboutUs_Header
   font-size: 1.7rem
@@ -86,4 +75,11 @@ iframe
 
   font-size: 1.2rem
   color: white
-  padding-top: 1.5rem
+  margin-top: 3rem
+
+.social-media-icons
+  margin-bottom: 13vh
+
+.icon_color
+ color: #F4976C 
+ margin-right: 3% 
