Adds styling, components and view for userregistration

--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap");
 .col-form-label-lg {
   padding-bottom: 0 !important;
@@ -10992,6 +10992,7 @@ h1, h2 {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
+  color: white;
 }
 
 h3, h4, h5 {
@@ -11019,6 +11020,10 @@ a:hover {
   font-size: 1.4em;
   text-transform: uppercase;
   color: white;
+}
+
+.segment--title {
+  padding: 2em 0 0.5em 0;
 }
 
 body {
@@ -11065,6 +11070,27 @@ button:focus {
   border: none;
 }
 
+.custom-select {
+  background-color: rgba(255, 255, 255, 0.35);
+  font-family: "Open Sans", sans-serif;
+}
+
+.custom-select.is-valid {
+  background-color: rgba(255, 255, 255, 0.35);
+  font-family: "Open Sans", sans-serif;
+  color: #FFF;
+}
+
+.custom-select:focus {
+  color: #383838;
+}
+
+option:disabled {
+  color: #5f5f5f;
+  font-weight: 300;
+  font-style: italic;
+}
+
 .form-control {
   color: #ffffff;
   background-color: rgba(255, 255, 255, 0.35);
@@ -11074,28 +11100,32 @@ button:focus {
 .form-control::-webkit-input-placeholder {
   color: #e4e4e4;
   font-family: "Open Sans", sans-serif;
+  font-size: 1em;
 }
 
 .form-control:-ms-input-placeholder {
   color: #e4e4e4;
   font-family: "Open Sans", sans-serif;
+  font-size: 1em;
 }
 
 .form-control::-ms-input-placeholder {
   color: #e4e4e4;
   font-family: "Open Sans", sans-serif;
+  font-size: 1em;
 }
 
 .form-control::placeholder {
   color: #e4e4e4;
   font-family: "Open Sans", sans-serif;
+  font-size: 1em;
 }
 
 .form-control.checkbox-form-control {
   background-color: transparent;
 }
 
-.custom-control {
+.custom-control, .custom-select {
   padding-left: 2.1em;
 }
 
@@ -11112,5 +11142,14 @@ button:focus {
   border-color: #fff;
   color: #fff;
   padding: 8px 1.2em;
+}
+
+.btn-outline-tassabtnred {
+  width: 200px;
+  border-radius: 20px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  margin-top: 2em;
 }
 /*# sourceMappingURL=mainstyles.css.map */
