--- a/src/assets/css/aboutUsPage.sass
+++ b/src/assets/css/aboutUsPage.sass
@@ -1,15 +1,16 @@
+// Variables and Mixins
+@import "_variables.sass"
+@import "_mixins.sass"
+
+// Images
 .pictureG
-  background-color: #f4976c
-  height: 18vh
-  width: 60%
-  border-radius: 11px 11px 0px 0px
+  background-color: $tassa-red
+  @include picture-size
   margin-top: 30%
 
 .pictureM
-  background-color: #b23850
-  height: 18vh
-  width: 60%
-  border-radius: 11px 11px 0px 0px
+  background-color: $tassa-red
+  @include picture-size
 
 iframe
   height: 20vh
@@ -18,68 +19,60 @@ iframe
 .gabbi
   background: none, url(../Gabbi.svg)
   position: absolute
-  background-repeat: no-repeat
 
 .mickis
   background: none, url(../Mickis.svg)
   position: absolute
-  background-repeat: no-repeat
 
+// Containers
+.aboutUs_banner
+  @include no-scroll
+  
 .textBox_container-right
   width: 53%
   height: 30%
-  background-color: #f4976c
+  background-color: $tassa-orange
   border-radius: 0px 0px 11px 11px
   margin-left: 7%
   top: 55%
   position: absolute
 
 .textBox_container-left
-  width: 52%
+  width: 53%
   height: 30%
-  background-color: #b23850
+  background-color: $tassa-orange
   border-radius: 0px 0px 11px 11px
   margin-left: 7%
   top: 80%
   position: absolute
 
+.selfie-container
+  margin-top: 2em
+
+// Typography
 .textBox_header
   font-size: 0.65rem
   color: white
   padding-top: 4%
 
 .textBox_title
-  font-size: 0.50rem
-  color: #636363
   text-align: left
   padding-left: 9%
+  @include secondary-text
 
-.fa-sm
-  font-size: 1.4rem
+.col-12
+  p
+    margin: $clear-sides
+    margin-bottom: 1em
 
-.icons
-  left: 8%
-
-.aboutUs_Header
-  font-size: 1.7rem
-  padding-top: 2rem
-  color: white
-
-.aboutUs_p
-
-  font-size: 1rem
-  text-align: left
-  padding-left: 1rem
-
-.aboutus_h2
-
-  font-size: 1.2rem
-  color: white
-  margin-top: 3rem
-
+// Icons
 .social-media-icons
-  margin-bottom: 13vh
+  margin-bottom: $clear-navbar
 
 .icon_color
- color: #F4976C 
- margin-right: 3% 
+ color: $tassa-orange
+ margin-right: 0.1em
+ margin: 0 1em
+
+.fa-sm
+  font-size: 2rem
